# MarkdownTimeSheets

./: 2025-08-25.md  2025-08-26.md  2025-09-01.md  Cargo.toml  README.md
src/: main.rs
test_data/: 2025-08-27.md
